Revision history for Perl extension Chess-Plisco

{{$NEXT}}
	- Should now work under MS-DOS

0.4  2021-10-12
	- Faster engine start-up because macros are expanded for release
	- EPD parser
	- check for insufficient material
	- detect draw by repetition
	- detect draw by 50-moves-rule
	- enhanced move ordering
	- better performance
	- macros in releases are now expanded for faster startup time
	- new option "Batch" for sequential processing
	- new command "fen"
	- new command "evaluate"
	- new command "see MOVE"
	- use PeSTO evaluation function

0.2  2021-09-21
	- fixed exception in quiescence search
	- implement the UCI stop command
	- fixed half-move clock reset after castling state change
	- fixed time forfeit, when playing as white

0.1  2021-09-19
	- initial version