@@ -1,7 +1,8 @@
 Revision history for Perl extension Chess-Plisco
 
 {{$NEXT}}
-	- Should now work under MS-DOS
+	- should now work under MS-DOS
+	- aspiration windows
 
 0.4  2021-10-12
 	- Faster engine start-up because macros are expanded for release
